Fixed misalignment and scaling issues with Kyouka

--- a/css/Table.scss
+++ b/css/Table.scss
@@ -78,6 +78,7 @@ table{
       font-family: Kyouka, Arial;
       font-weight: bold;
       letter-spacing: -.4em;
+      transform: translateX(-.2em);
     }
   }
 }
